horizontal scroll bug fix

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -33,3 +33,7 @@
     font-size: 2rem;
     text-transform: uppercase;
 }
+
+.motionClass {
+    display: flex;
+}
